# pico-zxspectrum

./: .gitignore  AY8910.c  AY8910.h  ArrayInputStream.h  BufferedInputStream.cpp  BufferedInputStream.h  CMakeLists.txt  FatFsSpiInputStream.cpp  FatFsSpiInputStream.h  FatFsSpiOutputStream.cpp  InputStream.cpp  InputStream.h  Jupiter Ace Resource Site - Jupiter Ace ROM Listing.html  OutputStream.cpp  OutputStream.h  Pulse.cpp  Pulse.h  PulseBlock.cpp  PulseBlock.h  PulseByte.cpp  PulseByte.h  PulseByteStream.cpp  PulseByteStream.h  PulsePreamble.h  QuickSave.cpp  QuickSave.h  README.md  SdCardFatFsSpi.cpp  SdCardFatFsSpi.h  SizingOutputStream.h  Z80.cpp  Z80.h  ZxSpectrum.cpp  ZxSpectrum.h  ZxSpectrum.uf2  ZxSpectrumArraySnapZ80.cpp  ZxSpectrumArraySnapZ80.h  ZxSpectrumAudioBuffer.cpp  ZxSpectrumAudioBuffer.h  ZxSpectrumAy.cpp  (+33 more)
Jupiter Ace Resource Site - Jupiter Ace ROM Listing_files/: JADefult_2018.css  jupiter_menu_data.js  milonic_src.js  mmenudom.js
docs/: MURMULATOR.md  MURMULATOR2.md  P1040672_1500x1500.xcf  Pico 1 pin PWM audio filter mono.cddx  Pico 2 pin PWM audio filter mono.cddx  Pico 4 pin PWM audio filter mono.cddx  Pico DVI over HDMI.cddx  Pico PS2 interface.cddx  Pico VGA RGB222.cddx  Pico VGA RGB332.cddx  Pico VGA RGBY1111.cddx  PicoZxHdmi.md  ZxSpectrum4PinAudioVga1111Ps2.cddx  ZxSpectrum4PinAudioVga1111Ps2.md  ZxSpectrumBreadboardHdmi4PinAudio.cddx  ZxSpectrumBreadboardHdmiKbd1PinAudio.cddx  ZxSpectrumBreadboardHdmiKbd1PinAudio.md  ZxSpectrumBreadboardHdmiKbd1PinAudio.uf2  ZxSpectrumBreadboardHdmiNPinAudio.md  ZxSpectrumCVBS.md  ZxSpectrumPiZero.md  ZxSpectrumPicoDv.cddx  ZxSpectrumPicoDv.md  ZxSpectrumPicoVga.md  ZxSpectrumPicomputerMax.cddx  ZxSpectrumPicomputerMax.md  ZxSpectrumPicomputerVga.cddx  ZxSpectrumPicomputerVga.md  ZxSpectrumPicomputerVga1111Zx.cddx  ZxSpectrumPicomputerVga222Zx.cddx  ZxSpectrumPicomputerVga222Zx.md  ZxSpectrumPicomputerVga222Zx.uf2  ZxSpectrumPicomputerVgaAuk.md  ZxSpectrumPicomputerZX.md  ZxSpectrumPicomputerZx2Lcd.md  ZxSpectrumPicomputerZxLcd.cddx  ZxSpectrumPicomputerZxLcd.md  audio_filter_4pin_mono_mk1.cddx  audio_filter_mk1.cddx  audio_filter_mk2.cddx  (+9 more)
src/: 128k_rom_1.h  128k_rom_1_forth.asm  128k_rom_2.h  ArrayInputStream.cpp  BufferedInputStream.h  CMakeLists.txt  EXTRAS.md  FatFsSpiOutputStream.cpp  FatFsSpiOutputStream.h  OutputStream.cpp  OutputStream.h  PicoMitePort.cpp  PicoMitePort.h  PicoOnScreenKeyboard.cpp  PicoOnScreenKeyboard.h  Pulse.h  PulseBlock.h  PulseByte.h  PulseByteStream.h  PulseCpu.cpp  PulseCpu.h  PulsePreamble.cpp  PulsePreamble.h  PulseProc.cpp  PulseProc.h  PulseProcBitStream.cpp  PulseProcBitStream.h  PulseProcCallStream.cpp  PulseProcCallStream.h  PulseProcChain.cpp  PulseProcChain.h  PulseProcPauseMillis.cpp  PulseProcPauseMillis.h  PulseProcPulseStream.cpp  PulseProcPulseStream.h  PulseProcRleSym.cpp  PulseProcRleSym.h  PulseProcStack.cpp  PulseProcStack.h  PulseProcStdByte.cpp  (+157 more)
src/ZxSpectrumHidMouseJoystick/: ZxSpectrumHidMouseJoystick.cpp  ZxSpectrumHidMouseJoystick.h
src/breadboard_hdmi/: CMakeLists.txt  main.cpp
src/hdmi/: CMakeLists.txt  custom_dvi_pin_configs.h  main.cpp
src/murmulator/: CMakeLists.txt  ps2kbd_mrmltr.h
src/murmulator/murmulator_hdmi/: CMakeLists copy.txt  CMakeLists.txt  main.cpp
src/murmulator/murmulator_vga/: CMakeLists.txt  main.cpp
src/pico_dv/: CMakeLists.txt  audio_i2s.cpp  audio_i2s.h  main.cpp  tmds_encode_zxspectrum.S  tmds_encode_zxspectrum.h
src/picomputer/: CMakeLists.txt  ZxSpectrumPicomputerJoystick.cpp  ZxSpectrumPicomputerJoystick.h  pzx_keyscan.cpp  pzx_keyscan.h
src/picomputer/picomputer_max/: CMakeLists.txt  hello_world.cpp  main.cpp  pzx_prepare_rgb444_scanline.h
src/picomputer/picomputer_st7789/: CMakeLists.txt  hello_world.cpp  main.cpp  pzx_prepare_rgb444_scanline.cpp  pzx_prepare_rgb444_scanline.h  st7789_lcd.cpp  st7789_lcd.h  st7789_lcd.pio
src/picomputer/picomputer_vga/: CMakeLists.txt  main.cpp
src/picomputer/picomputer_vga_zx/: CMakeLists.txt  main.cpp  pzx_prepare_vga332_scanline.cpp  pzx_prepare_vga332_scanline.h  pzx_prepare_vga_1111_scanline.cpp  pzx_prepare_vga_1111_scanline.h
src/picomputer_max/: CMakeLists.txt  ZxSpectrumPicomputerVgaJoystick.h  hello_world.cpp  main.cpp  pzx_keyscan.cpp  pzx_prepare_rgb444_scanline.cpp  pzx_prepare_rgb444_scanline.h  st7789_lcd.cpp  st7789_lcd.h  tft_font8x8.h  tft_t_dma.cpp  tft_t_dma.h  tft_t_dma_config.h
src/picomputer_vga/: CMakeLists.txt  ZxSpectrumPicomputerVgaJoystick.cpp  ZxSpectrumPicomputerVgaJoystick.h  hw_config.c  main.cpp  pzx_keyscan.cpp  pzx_prepare_vga332_scanline.cpp
src/picovga/: CMakeLists.txt  main.cpp
src/vga/: CMakeLists.txt  ZxRgb332RenderLoop.cpp  ZxRgb332RenderLoop.h  main.cpp
test/: tzx-test-block-11.tzx
uf2/: ZX-MURMULATOR_HDMI.uf2  (+74 more)
uf2-rp2040/: ZX-MURMULATOR2_HDMI_HDMI_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR2_HDMI_HDMI_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR2_HDMI_I2S_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR2_HDMI_I2S_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR2_HDMI_PWM_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR2_HDMI_PWM_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR2_VGA_I2S_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR2_VGA_I2S_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR2_VGA_PWM_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR2_VGA_PWM_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR_HDMI_HDMI_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR_HDMI_HDMI_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR_HDMI_I2S_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR_HDMI_I2S_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR_HDMI_PWM_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR_HDMI_PWM_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR_VGA_I2S_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR_VGA_I2S_AUDIO_720x576x50Hz.uf2  ZX-MURMULATOR_VGA_PWM_AUDIO_640x480x60Hz.uf2  ZX-MURMULATOR_VGA_PWM_AUDIO_720x576x50Hz.uf2  ZxSpectrum4PinAudioVga1111Ps2_640x480x60Hz.uf2  ZxSpectrum4PinAudioVga1111Ps2_720x576x50Hz.uf2  ZxSpectrum4PinAudioVga222Ps2_640x480x60Hz.uf2  ZxSpectrum4PinAudioVga222Ps2_720x576x50Hz.uf2  ZxSpectrumAdafruitFeatherHdmi.uf2  ZxSpectrumBobZero_640x480x60Hz.uf2  ZxSpectrumBobZero_720x576x50Hz.uf2  ZxSpectrumBreadboardHdmi1PinAudio.uf2  ZxSpectrumBreadboardHdmi2PinAudio.uf2  (+39 more)
(+67 files in other folders)
